fix: transaction list data alignment

--- a/src/features/Transactions/components/TransactionList/TransactionList.css
+++ b/src/features/Transactions/components/TransactionList/TransactionList.css
@@ -17,10 +17,16 @@
 
 #transactionList-main-container ul li {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 1em;
   border-bottom: 1px solid #9e9e9e3b;
   padding-bottom: 1em;
   align-items: center;
+}
+
+#transactionList-main-container ul li > span:first-child {
+  grid-column: span 6;
 }
 
 #action-button-container {
